@@ -1,4 +1,5 @@
 next (1.0):
+	- ModelHelper: self deprecated; pass current action via request attribute 
 	- empty suffix registered for web actions
 	- errors in action declarations cause ServletExceptions. application won't start.
 	- Controller moved to de.highbyte_le.weberknecht.Controller
